<resources>
    <string name="app_name">Hotel Cloud</string>
    <string name="action_settings">Settings</string>

    <string name="menu_hotel">Hotel Cloud</string>
    <string name="menu_room">Rooms</string>
    <string name="menu_services">Services</string>
    <string name="menu_logout">Sign off</string>
    <string name="communicate">Communicate</string>
    <string name="menu_share">Share</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_my_profile">My profile</string>
    <string name="menu_activities">Activities</string>
    <string name="price_night">Price/Night</string>
    <string name="connection_failed">Connection failed</string>
    <string name="from">"From: $"</string>
    <string name="scan">Scan</string>
    <string name="loading">Wait please, loading...</string>
    <string name="featured">Featured</string>
    <string name="logo">logotype</string>
    <string name="version_app">1.0</string>
    <string name="spanish">Spanish</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="portuguese">Portuguese</string>
    <string name="language">Language</string>
    <string name="price_person">Price/Person</string>
    <string name="search_hint">Search</string>
    <string name="night">/Night</string>
    <string name="capacity">"Capacity: "</string>
    <string name="person">person</string>
    <string name="exit_message">Please click back again to exit</string>
    <string name="confirmation_number">Confirmation number</string>
    <string name="email_or_surname">Email or surname</string>
    <string name="accept">Accept</string>
    <string name="enter_data_requested">You must enter all the requested data</string>
    <string name="search_reservation">Search Reservation</string>
    <string name="register_data">Register data</string>
    <string name="idcard">Id card</string>
    <string name="passport">Passport</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>
    <string name="document">Document</string>
    <string name="genre">Genre</string>
    <string name="id_number">Id number</string>
    <string name="first_name">First name</string>
    <string name="second_name">Second name</string>
    <string name="first_surname">First surname</string>
    <string name="second_surname">Second surname</string>
    <string name="birthday">Birthday</string>
    <string name="nationality">Nationality</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="add">Add</string>
    <string name="people_list">People list</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="forgot_password">Forgot password</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="alert_chooser_title">Choose ID document</string>
    <string name="camera_permission_message">Access to the camera was not granted so it will not be available</string>
    <string name="gallery_permission_message">Access to the photo gallery was not granted so it will not be available</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="complete_field">Complete all required fields</string>
    <string name="required_asterisk">* Required</string>
    <string name="adult">Adult</string>
    <string name="kid">Kid</string>
    <string name="images">Images</string>
    <string name="select_image">Select image</string>
    <string name="optional">Optional</string>
    <string name="booking_not_found">Booking not found</string>
    <string name="doc_type_message_error">Select a document type</string>
    <string name="genre_message_error">Select genre</string>
    <string name="wrong_date_format">Wrong date format</string>
    <string name="select_date">Select date</string>
    <string name="check_in">Check in reservation</string>
    <string name="surname">Surname</string>
    <string name="confirmation">Confimation</string>
    <string name="kids">Kids</string>
    <string name="adults">Adults</string>
    <string name="room">Room</string>
    <string name="pre_check_in">Precheck-in</string>
    <string name="final_confirm">Confirm</string>
    <string name="to">To</string>
    <string name="fromDate">From</string>
    <string name="notice_of_privacy_title">Notice of Privacy</string>
    <string name="notice_of_privacy">Lorem ipsum dolor sit amet consectetur adipiscing elit. Nullam molestie, nunc eu consequat varius, nisi metus iaculis nulla, nec ornare odio leo quis eros. Donec gravida eget velit eget pulvinar. Phasellus eget est quis est faucibus condimentum. Morbi tellus turpis, posuere vel tincidunt non, varius ac ante. Suspendisse in sem neque. Donec et faucibus justo. Nulla vitae nisl lacus. Fusce tincidunt quam nec vestibulum vestibulum. Vivamus vulputate, nunc non ullamcorper mattis, nunc orci imperdiet nulla, at laoreet ipsum nisl non leo. Aenean dapibus aliquet sem, ut lacinia magna mattis in.  Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur tempor arcu eu sapien ullamcorper sodales. Aenean eu massa in ante commodo scelerisque vitae sed sapien. Aenean eu dictum arcu. Mauris ultricies dolor eu molestie egestas. Proin feugiat, nunc at pellentesque fringilla, ex purus efficitur dolor, ac pretium odio lacus id leo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse eu ipsum viverra dolor tempus vehicula eu eu risus. Praesent rutrum dapibus odio, nec accumsan justo fermentum in. Ut quis neque a ante facilisis bibendum.</string>
    <string name="accept_conditions">I accept terms and conditions of privacy</string>
    <string name="unverified">Unverified</string>
    <string name="main">Main</string>
    <string name="verified">Verified</string>
    <string name="petitions">Petitions</string>
    <string name="edit_option">Edit option</string>
    <string name="image_upload">You must upload an image of an identification to carry out the data validation</string>
    <string name="information">Information</string>
    <string name="dinners">Dinners</string>
    <string name="max_adults">Max Adults:</string>
    <string name="max_chidren">Max Chidren</string>
    <string name="buy">Buy</string>
    <string name="_8_hours">8 Hours</string>
    <string name="duration">Duration:</string>
    <string name="package_selected">Package Selected:</string>
</resources>