<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_hotel">

    <fragment
        android:id="@+id/nav_hotel"
        android:name="com.cancunsoftware.hotelbooking.userinterfaces.fragments.HotelFragment"
        android:label="@string/menu_hotel"
        tools:layout="@layout/fragment_hotel" />

    <fragment
        android:id="@+id/nav_room"
        android:name="com.cancunsoftware.hotelbooking.userinterfaces.fragments.RoomFragment"
        android:label="@string/menu_room"
        tools:layout="@layout/fragment_room" />

    <fragment
        android:id="@+id/nav_activities"
        android:name="com.cancunsoftware.hotelbooking.userinterfaces.fragments.ActivitiesFragment"
        android:label="@string/menu_activities"
        tools:layout="@layout/fragment_activities" />

    <fragment
        android:id="@+id/nav_services"
        android:name="com.cancunsoftware.hotelbooking.userinterfaces.fragments.ServicesFragment"
        android:label="@string/menu_services"
        tools:layout="@layout/fragment_services" />
</navigation>