<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/round_border"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".userinterfaces.dialog.NoticeOfPrivacyDialog">

    <TextView
        android:id="@+id/titleNoticeOfPrivacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="serif"
        android:text="@string/notice_of_privacy_title"
        android:textColor="@color/primary"
        android:textSize="26sp"
        android:textStyle="bold" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/notice_of_privacy" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkBoxAccept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/accept_conditions" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAccept"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/primary"
                android:enabled="false"
                android:padding="16dp"
                android:text="@string/accept"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:cornerRadius="30dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>